--- a/title.html
+++ b/title.html
@@ -134,7 +134,7 @@
   <span class="mdl-switch__label"></span>
 </label><p>
 
-            <a class="mdl-navigation__link mdl-shadow--6dp " href="main.html"><i class="mdl-color-text--blue-grey-400 material-icons " role="presentation">list</i>The Feed</a>
+            <a class="mdl-navigation__link mdl-shadow--6dp " href="title.html"><i class="mdl-color-text--blue-grey-400 material-icons " role="presentation">list</i>The Feed</a>
           <a class="mdl-navigation__link " href="inbox.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">email</i>Inbox</a>
           <a class="mdl-navigation__link" href="profile.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">face</i>Profile</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Forums</a>
