--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600" style="height: 10%;">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title"><a class="mdl-navigation__link0" href="main.html">Scene</a></span>
+          <span class="mdl-layout-title"><a class="mdl-navigation__link0" href="title.html">Scene</a></span>
           <div class="mdl-layout-spacer"></div>
           
           <!-- Search -->
@@ -146,7 +146,7 @@
   <input type="checkbox" id="switch-2" class="mdl-switch__input">
   <span class="mdl-switch__label"></span>
 </label><p>
-            <a class="mdl-navigation__link " href="main.html"><i class="mdl-color-text--blue-grey-400 material-icons " role="presentation">list</i>The Feed</a>
+            <a class="mdl-navigation__link " href="title.html"><i class="mdl-color-text--blue-grey-400 material-icons " role="presentation">list</i>The Feed</a>
           <a class="mdl-navigation__link " href="inbox.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">email</i>Inbox</a>
           <a class="mdl-navigation__link mdl-shadow--6dp" href="profile.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">face</i>Profile</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Forums</a>
@@ -215,7 +215,7 @@
       </form>
       
         <div class="mdl-card__actions mdl-card--border">
-          <button id="demo-show-snackbar" href="main.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored close" style=" display: block;align: center; margin-left: auto; margin-right: auto; font-size: 18px;"><i class="material-icons">send</i>
+          <button id="demo-show-snackbar" href="title.html" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored close" style=" display: block;align: center; margin-left: auto; margin-right: auto; font-size: 18px;"><i class="material-icons">send</i>
           </button>
         </div>
   </dialog>
