--- a/login.html
+++ b/login.html
@@ -140,7 +140,7 @@ body {
                   </div>
                 </form>
                   <div class="mdl-card__actions mdl-card--border">
-                    <a href="main.html" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" style=" display: block;align: center; margin-left: auto; margin-right: auto; font-size: 18px;">
+                    <a href="title.html" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" style=" display: block;align: center; margin-left: auto; margin-right: auto; font-size: 18px;">
                       Sign Up
                     </a>
                   </div>
