--- a/title.html
+++ b/title.html
@@ -78,6 +78,11 @@
   
 }
 
+     img
+{
+background-image:url('https://github.com/jcorrie/sceneapp/blob/master/loading.gif');
+} 
+      
     </style>
   </head>
   <body>
