--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.cyan-light_blue.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-pink.min.css" />
     <link rel="stylesheet" href="app_styles.css">
     <style>
     #view-source {
@@ -115,7 +115,7 @@
           -->
           
       <!-- Accent-colored raised button with ripple -->
-<a class="mdl-layout--large-screen-only mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" href="login.html">Log Out
+<a class="mdl-layout--large-screen-only mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" href="login.html">Log Out
   
 </a>
 
@@ -148,7 +148,7 @@
 </label><p>
             <a class="mdl-navigation__link " href="title.html"><i class="mdl-color-text--blue-grey-400 material-icons " role="presentation">list</i>The Feed</a>
           <a class="mdl-navigation__link " href="inbox.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">email</i>Inbox</a>
-          <a class="mdl-navigation__link mdl-shadow--6dp" href="profile.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">face</i>Profile</a>
+          <a class="mdl-navigation__link mdl-shadow--6dp" href="profile.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">face</i>You</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Forums</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">settings</i>Settings</a>
