--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@ https://github.com/Team-Code/KA_Offline -->
      <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="192x192" href="scene_logo.png">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
