--- a/settings.html
+++ b/settings.html
@@ -139,17 +139,17 @@ dialog {
           <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
             <li class="mdl-menu__item">About</li>
             <li class="mdl-menu__item">Contact</li>
-            <a class="mdl-menu__item" href="login.html">Log Out</a>
+            <a class="mdl-menu__item" href="landing.html">Log Out</a>
           </ul>
           ex
           -->
           
       <!-- Accent-colored raised button with ripple -->
-<a class="mdl-layout--large-screen-only mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" href="login.html">Log Out
+<a class="mdl-layout--large-screen-only mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" href="landing.html">Log Out
   
 </a>
 
-<a class="mdl-layout--small-screen-only mdl-button mdl-js-button mdl-button--icon mdl-button--colored" href="login.html"><i class="material-icons" role="">power_settings_new</i>
+<a class="mdl-layout--small-screen-only mdl-button mdl-js-button mdl-button--icon mdl-button--colored" href="landing.html"><i class="material-icons" role="">power_settings_new</i>
 </a>
         </div>
       </header>
