--- a/landing.html
+++ b/landing.html
@@ -1038,7 +1038,7 @@ $(function(){
           </div>
         
         <div class="dialog-content">
-                      <p>Please use your work address, so you can join your team in Asana.</p>
+                      <p>Sign up. Be Scene.</p>
                   </div>
 
                     </div>
