--- a/inbox.html
+++ b/inbox.html
@@ -49,6 +49,17 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-pink.min.css" />
     <link rel="stylesheet" href="app_styles.css">
     
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-86878521-5', 'auto');
+  ga('send', 'pageview');
+
+</script>
+    
     <style>
     #view-source {
       position: fixed;
