--- a/title.html
+++ b/title.html
@@ -455,7 +455,7 @@ dialog {
       
         href="https://twitter.com/SceneinLondon1" data-width="100%" data-height="500%" data-chrome="transparent" data-tweet-limit="10">Team Scene's Twitter page seems to be taking a nap. Check back soon!</a> 
         
-        <script async src="http://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
   
   
