--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,9 @@
 <html lang="en" itemscope="" itemtype="http://schema.org/MobileApplication" class="wf-inactive gr__asana_com">
   
   <head>
+    
   <title>Be Scene</title>
+  <meta name="google-site-verification" content="rIneksxB3SBgz55c-cV8baYSbNVbQHh3irPCwiVhWBw" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta charset="utf-8"> 
 <!-- Title Tagz -->
@@ -85,7 +87,6 @@
 <meta name="twitter:app:name:googleplay" content="Asana Mobile">
 <meta name="twitter:app:id:googleplay" content="com.asana.app">
 
-<meta name="google-site-verification" content="DxotoqlMTfSRrxiKGMd-XA44xVkuFK-hBE6Fb1s_sos">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <iframe height="0" width="0" src="//5114821.fls.doubleclick.net/activityi;src=5114821;type=retar0;cat=gener0;ord=4825699936665;~oref=https%3A%2F%2Fasana.com%2F%3F-noredirect?" style="display: none; visibility: hidden;"></iframe><script src="https://script.crazyegg.com/pages/scripts/0031/2742.js?410797" async="" type="text/javascript"></script><script async="" src="//connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" async="" src="//www.googleadservices.com/pagead/conversion_async.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-P7MF9W"></script><script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script src="https://apis.google.com/_/scs/apps-static/_/js/k=oz.gapi.en.bRDJBM_7ci0.O/m=client/rt=j/sv=1/d=1/ed=1/am=EQ/rs=AGLTcCMQWfcLeLZsrj7F3isSD44W4ZvQxQ/cb=gapi.loaded_0" async=""></script><script type="application/ld+json">
@@ -146,7 +147,7 @@
   -->
   <script src="https://platform.twitter.com/oct.js" async="" id="twttr-js"></script><link rel="stylesheet" href="/_themes/asana/css/fonts-nonblocking.css" media="all">
 
-    <script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -156,7 +157,6 @@
   ga('send', 'pageview');
 
 </script>
-
 
 <style id="fit-vids-style">.fluid-width-video-wrapper{width:100%;position:relative;padding:0;}.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}</style><style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
 .en-markup-crop-options {
@@ -173,7 +173,6 @@
 }
 </style>
 
-<script async="" src="//cdn.nanigans.com/NaN_tracker.js"></script>
 
 </head>
 
@@ -423,7 +422,7 @@ $(function(){
         <p class="p--large">Scene is built by us with love for you. It's not an app. It's a new home for your community.</p>
         <a class="button button--secondary button--background" href="title.html">Learn More</a>
       </div>
-      <div class="screenshot-container">
+      <div class="screenshot-container" style="">
         <img src="https://luna1.co/04bcb6.png" id="not-an-img" class="placeholder" alt="placeholder image" title="">
         <span>
                 <img class="screenshots active" id="screenshot-1" src="demoScreenshot1.png" alt="Screenshot" title="Screenshot" style="display: block; overflow: hidden;">
