--- a/landing.html
+++ b/landing.html
@@ -1,4 +1,16 @@
 <!DOCTYPE HTML>
+<!--
+
+Team Scene has used the HTML/CSS and script architecture from the Asana landing page (https://asana.com/?-noredirect).
+
+The architecture has been used as a replacement for a Wix, Wordpress or Squarespace template for the purpose of the LAUNCH: Working in Digital project. It was chosen in place of such templates as commercial web building products offer extremely limited editing capability unless the user subscribes and it would have been very difficult to integrate the landing page with the main application. The Asana landing page was chosen as a template as it closest resembled a "blank page" architecture for a standard, modern, responsive, mobile first landing page - much like one may find on Wix.
+All content and colour schemes have been modified to reflect Scene's branding and message.
+
+This landing page will not be used if/when Scene develops a functional web app, rather than a static site for presentation purposes only.
+
+Any queries please contact: sceneinlondon1@gmail.com
+
+-->
 
 <html lang="en" itemscope="" itemtype="http://schema.org/MobileApplication" class="wf-inactive gr__asana_com">
   
