--- a/settings.html
+++ b/settings.html
@@ -286,9 +286,9 @@ dialog {
                           
                           <!-- Accent-colored raised button with ripple -->
               <div class="mdl-card__actions mdl-card--border">
-                  <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                  <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" href="/settings.html#subscribe">
                     I'm in, obviously.
-                  </button>
+                  </a>
                   
               </div>
 
