--- a/settings.html
+++ b/settings.html
@@ -286,7 +286,7 @@ dialog {
                           
                           <!-- Accent-colored raised button with ripple -->
               <div class="mdl-card__actions mdl-card--border">
-                  <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" href="/settings.html#subscribe">
+                  <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" href="subscriptionTest.html">
                     I'm in, obviously.
                   </a>
                   
