--- a/title.html
+++ b/title.html
@@ -151,7 +151,7 @@ dialog {
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600" style="height: 8% !important;">
         <div class="mdl-layout__header-row" style="">
-         <img id="sceneLogoMain" src="scene_logo.png" style="height: 80%; margin-top: ; margin-bottom:;">
+         <img id="sceneLogoMain" href="title.html" src="scene_logo.png" style="height: 80%; margin-top: ; margin-bottom:;">
           <div class="mdl-layout-spacer"></div>
           
           <!-- Search -->
