--- a/title.html
+++ b/title.html
@@ -122,7 +122,7 @@ dialog {
 .timeline-Body {
   
   font-family: 'Roboto';
-  twitt
+ 
 }
 
 .twitter-div{
@@ -151,7 +151,9 @@ dialog {
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600" style="height: 8% !important;">
         <div class="mdl-layout__header-row" style="">
-         <img id="sceneLogoMain" href="title.html" src="scene_logo.png" style="height: 80%; margin-top: ; margin-bottom:;">
+          <a href="title.html">
+              <img id="sceneLogoMain" src="scene_logo.png" style="height: 80%; margin-top: ; margin-bottom:;">
+          </a>
           <div class="mdl-layout-spacer"></div>
           
           <!-- Search -->
