--- a/title.html
+++ b/title.html
@@ -151,8 +151,8 @@ dialog {
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600" style="height: 8% !important;">
         <div class="mdl-layout__header-row" style="">
-          <a href="title.html">
-              <img id="sceneLogoMain" src="scene_logo.png" style="height: 80%; margin-top: ; margin-bottom:;">
+           <a href="title.html" style="height: 80%;">
+         <img id="sceneLogoMain" src="scene_logo.png" style="height: 80%;">
           </a>
           <div class="mdl-layout-spacer"></div>
           
