--- a/settings.html
+++ b/settings.html
@@ -126,7 +126,11 @@ dialog {
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600" style="height: 10%;">
         <div class="mdl-layout__header-row">
-         <img src="scene_logo.png" style="height: 80%; margin-top: 1%; margin-bottom: 1%;">
+          
+                 <a href="title.html" style="height: 80%;">
+  
+                   <img src="scene_logo.png" style="height: 80%; margin-top: 1%; margin-bottom: 1%;">
+                  </a>
           <div class="mdl-layout-spacer"></div>
           
           <!-- Search -->
