--- a/landing.html
+++ b/landing.html
@@ -265,7 +265,7 @@
 
   <!-- two checks, the first to see if we've already asked for a work email, the second has an alternate CTA without "Free" -->
 
-  <a id="signup-submit-home" class="button" tabindex="13" href="title.html" title="Sign Up" style="width: auto;">Join. It's Free.</a>
+  <a class="button" tabindex="13" href="title.html" title="Sign Up" style="width: auto;">Join. It's Free.</a>
 
   <div class="error-message-container">
     <div id="signup-email-home-not-valid" class="error-message" style="display:none">
@@ -478,7 +478,7 @@ $(function(){
 
   <!-- two checks, the first to see if we've already asked for a work email, the second has an alternate CTA without "Free" -->
 
-  <a id="signup-submit-prefooter-laptop-cta" class="button" tabindex="13"  title="Sign Up" style="width:auto; margin-top: 5px;">Join. It's Free.</a>
+  <a href="title.html" class="button" tabindex="13"  title="Sign Up" style="width:auto; margin-top: 5px;">Join. It's Free.</a>
 
   <div class="error-message-container">
     <div id="signup-email-prefooter-laptop-cta-not-valid" class="error-message" style="display:none">
@@ -761,7 +761,7 @@ $(function(){
 
   <!-- two checks, the first to see if we've already asked for a work email, the second has an alternate CTA without "Free" -->
 
-  <button id="signup-submit-modal-get-started" class="" tabindex="4003" href="title.html" title="Sign Up">Join. It's Free.</button>
+  <a id="" class="" tabindex="4003" href="title.html" title="Sign Up">Join. It's Free.</a>
 
   <div class="error-message-container">
     <div id="signup-email-modal-get-started-not-valid" class="error-message" style="display:none">
