--- a/landing.html
+++ b/landing.html
@@ -338,34 +338,34 @@ $(function(){
         <div class="customer-list">
           <div class="equal-height-row">
                           <div class="customer equal-float-candidate" style="height: auto;">
-  <img class="equal-elem" src="nchLogo.png" alt="NCH" title="NCH Logo" style="height: 0px;" data-eqh-postop="0">
+  <img class="equal-elem" src="nchLogo.png" alt="NCH" title="NCH Logo">
 </div>
 
 
                           <div class="customer equal-float-candidate" style="height: auto;">
-  <img class="equal-elem" src="rscLogo.png" alt="RSC" title="RSC Logo" style="height: 0px;" data-eqh-postop="0">
+  <img class="equal-elem" src="rscLogo.png" alt="RSC" title="RSC Logo">
 </div>
 
 
                           <div class="customer equal-float-candidate" style="height: auto;">
-  <img class="equal-elem" src="theatrelandLogo.png" alt="Theatreland" title="Theatreland Logo" style="height: 0px;" data-eqh-postop="0">
+  <img class="equal-elem" src="theatrelandLogo.png" alt="Theatreland" title="Theatreland Logo" data-eqh-postop="0">
 </div>
 
 
                           <div class="customer equal-float-candidate" style="height: auto;">
-  <img class="equal-elem" src="equityLogo.png" alt="Equity" title="Equity Logo" style="height: 0px;" data-eqh-postop="0">
+  <img class="equal-elem" src="equityLogo.png" alt="Equity" title="Equity Logo" data-eqh-postop="0">
 </div>
 
 
                           <div class="customer equal-float-candidate" style="height: auto;">
-  <img class="equal-elem" src="catLogo.png" alt="Cat Logo" title="Cat Logo" style="height: 0px;" data-eqh-postop="0">
+  <img class="equal-elem" src="catLogo.png" alt="Cat Logo" title="Cat Logo" data-eqh-postop="0">
 </div>
 
          
 
 
                           <div class="customer equal-float-candidate" style="height: auto;">
-  <img class="equal-elem" src="radaLogo.png" alt="Rada" title="Rada Logo" style="height: 0px;" data-eqh-postop="0">
+  <img class="equal-elem" src="radaLogo.png" alt="Rada" title="Rada Logo"  data-eqh-postop="0">
 </div>
 
 
